@@ -73,7 +73,6 @@ class BarData
     double getClose (int);
     double getVolume (int);
     double getOI (int);
-    double getAverage (int);
     void prepend (Bar *bar);
     int getX (BarDate);
     double getMax ();
